--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ body{
 main {
   background-color: white;
   margin-top: 70px;
-  border: 2px solid red;
 }
 
 .first-nav-bar{
@@ -135,5 +134,6 @@ main {
   padding: 180px 0 0 10px;
 }
 
-.most-popular {
+hr {
+  border: 1.5px solid lightgray;
 }
