adjust positioning to sections for the desktop view

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+/*   overflow-x: hidden; */
 }
 
 body{
@@ -20,10 +21,10 @@ main {
   margin-top: 60px;
 }
 
-section {
+/* section {
   margin: 5px auto auto 20px;
 }
-
+ */
 .navbar{
   position: fixed;
   width: 100%;
@@ -292,7 +293,6 @@ hr {
 
 /* <<< DEALS SECTION >>> */
 .deals {
-  width: 100%;
   display: grid;
   row-gap: 5px;
 }
@@ -534,6 +534,16 @@ div.socials {
     row-gap: 10px;
   }
 
+  .deal-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    row-gap: 20px;
+  }
+
+  .deal-pic {
+    height: 180px;
+  }
+
   /* footer */
 
   .footer-levels {
@@ -719,5 +729,43 @@ div.socials {
   .rounds-links > p {
     display: inline-block;
   }
+
+  /* Categories */
+
+  .categories {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    row-gap: 20px;
+    column-gap: 20px;
+  }
+
+  .categories > section {
+    margin: 0;
+  }
+
+  /* Deals */
+
+  .deals-main {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    column-gap: 25px;
+    row-gap: 20px;
+  }
+
+  .deal-container {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+
+  .deal-pic {
+    height: 200px;
+  }
+
+  /* footer */
+
+  .footer-levels {
+    display: inline-block;
+  }
+
 
 }
